--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "bs4>=0.0.2",
+    "dotenv>=0.9.9",
     "easyocr>=1.7.2",
+    "google-genai>=1.38.0",
     "pillow>=11.3.0",
     "pymupdf>=1.26.4",
     "pypdf2>=3.0.1",
