--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,17 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "bs4>=0.0.2",
+    "docx>=0.2.4",
     "dotenv>=0.9.9",
     "easyocr>=1.7.2",
     "google-genai>=1.38.0",
     "pillow>=11.3.0",
+    "plotly>=6.3.0",
     "pymupdf>=1.26.4",
     "pypdf2>=3.0.1",
     "pytesseract>=0.3.13",
+    "python-docx>=1.2.0",
     "requests>=2.32.5",
     "speechrecognition>=3.14.3",
+    "streamlit>=1.49.1",
 ]
